syntax = "proto3";
package api.v1;

import "google/protobuf/duration.proto";

option go_package = "github.com/jeffrom/job-manager/pkg/api/v1";


message SaveQueueParamArgs {
  string name = 1;
  int32 concurrency = 2;
  int32 max_retries = 3;
  google.protobuf.Duration duration = 4;
  map<string, string> labels = 5;
  bytes arg_schema = 6;
  bytes data_schema = 7;
  bytes result_schema = 8;
}

message SaveQueueParams {
  repeated SaveQueueParamArgs queues = 1;
}
